<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Virtual Math Contest</string>
    <string name="action_settings">Settings</string>
    <string name="title_section1">Main Menu</string>
    <string name="title_section2">Techniques Trainer</string>
    <string name="title_section3">Speed Arithmetic</string>
    <string name="welcomeText">Welcome, Contestant!</string>
    <string name="gradeLevelText">Your current grade level is</string>
    <string name="selectGradeLevelText">Select Your Grade Level</string>
    <string-array name="grades">
    <item>Grade 1&#8211;2</item>
    <item>Grade 3&#8211;4</item>
    <item>Grade 5&#8211;6</item>
    </string-array>
    <string name="settingsHintText">To change your grade level, go to "Settings" menu on your top right.</string>
    <string name="questionSolvedText">You have solved</string>
    <string name="question">question</string>
    <string name="pointText">and earned</string>
    <string name="point">point</string>
    <string name="trainSkillsText">Solve more questions in Techniques Trainer to train your skills!</string>
    <string name="trainSpeedText">Also, don\'t hesistate on training your speed for calculations at Speed Arithmetic!</string>
    <string name="gradeLevelMenuText">Grade Level</string>
    <string name="resetText">Reset Statistics</string>
    <string name="areYouSureText">Are you sure?</string>
    <string name="eraseText">All your data will be erased.</string>
    <string name="confirmText">Confirm</string>
    <string name="cancelText">Cancel</string>
    <string name="submitText">Submit</string>
    <string name="correctText">Good job! You earned</string>
    <string name="tryAgainText">Try Again!</string>
    <string name="pickQuestionText">Pick a question</string>
    <string name="randomQuestionText">Give me a question!</string>
    <string name="questionNotPickedText">Choose A Question First!</string>
    <string name="pickTopicPromptText">Which topic do you want?</string>
    <string name="pickQuestionPromptText">Which question do you want?</string>
    <string name="chooseAQuestionFirstText">Please Choose A Question First!</string>
    <string name="howManyQuestionText">How many questions?</string>
    <string name="startText">Start</string>
    <string name="stopText">Stop</string>
    <string name="secondsLeftText">seconds left</string>
    <string name="timesUpText">Time\'s Up!</string>
    <string name="outOfText">out of</string>
    <string name="stoppedText">Your current session has been terminated. \nPlease enter the number of questions you want and press \&quot;Start\&quot; to start another session. </string>
    <string name="speedArithmeticQuestionPromptText">Please enter the number of questions you want and press \"Start\" to get started.</string>
</resources>