<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/mainMenuTableLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <TableRow
        android:id="@+id/techniquesTrainerTableRow"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:paddingBottom="@dimen/vertical_padding"
        android:paddingLeft="@dimen/horizontal_padding"
        android:paddingRight="@dimen/horizontal_padding"
        android:paddingTop="@dimen/vertical_padding" >

        <TextView
            android:id="@+id/welcomeTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/welcomeText"
            android:textSize="@dimen/large_text_size" />
    </TableRow>

    <TableRow
        android:id="@+id/tableRow2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:paddingBottom="@dimen/vertical_padding"
        android:paddingLeft="@dimen/horizontal_padding"
        android:paddingRight="@dimen/horizontal_padding"
        android:paddingTop="@dimen/vertical_padding" >

        <TextView
            android:id="@+id/gradeLevelTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/gradeLevelText"
            android:textSize="@dimen/text_size" />
    </TableRow>

    <TableRow
        android:id="@+id/tableRow3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:paddingBottom="@dimen/vertical_padding"
        android:paddingLeft="@dimen/horizontal_padding"
        android:paddingRight="@dimen/horizontal_padding"
        android:paddingTop="@dimen/vertical_padding" >

        <TextView
            android:id="@+id/settingsHintTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/settingsHintText"
            android:textSize="@dimen/text_size" />
    </TableRow>

    <TableRow
        android:id="@+id/tableRow4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:paddingBottom="@dimen/vertical_padding"
        android:paddingLeft="@dimen/horizontal_padding"
        android:paddingRight="@dimen/horizontal_padding"
        android:paddingTop="@dimen/vertical_padding" >

        <TextView
            android:id="@+id/questionSolvedTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textSize="@dimen/text_size" />
    </TableRow>

    <TableRow
        android:id="@+id/tableRow5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:paddingBottom="@dimen/vertical_padding"
        android:paddingLeft="@dimen/horizontal_padding"
        android:paddingRight="@dimen/horizontal_padding"
        android:paddingTop="@dimen/vertical_padding" >

        <TextView
            android:id="@+id/pointTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textSize="@dimen/text_size" />
    </TableRow>

    <TableRow
        android:id="@+id/tableRow6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:paddingBottom="@dimen/vertical_padding"
        android:paddingLeft="@dimen/horizontal_padding"
        android:paddingRight="@dimen/horizontal_padding"
        android:paddingTop="@dimen/vertical_padding" >

        <TextView
            android:id="@+id/trainSkillsTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:paddingLeft="@dimen/horizontal_padding"
            android:text="@string/trainSkillsText"
            android:textSize="@dimen/text_size" />
    </TableRow>

    <TableRow
        android:id="@+id/tableRow7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:paddingBottom="@dimen/vertical_padding"
        android:paddingLeft="@dimen/horizontal_padding"
        android:paddingRight="@dimen/horizontal_padding"
        android:paddingTop="@dimen/vertical_padding" >

        <TextView
            android:id="@+id/trainSpeedTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/trainSpeedText"
            android:textSize="@dimen/text_size" />
    </TableRow>

</TableLayout>