<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/techniquesTrainerTableLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <TableRow
        android:id="@+id/typeSpecificTableRow"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:paddingBottom="@dimen/vertical_padding"
        android:paddingLeft="@dimen/horizontal_padding"
        android:paddingRight="@dimen/horizontal_padding"
        android:paddingTop="@dimen/vertical_padding" >

        <Button
            android:id="@+id/pickQuestionButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pickQuestionText" />

        <Button
            android:id="@+id/randomQuestionButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/randomQuestionText" />

    </TableRow>

    <TextView
        android:id="@+id/questionInfoTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:paddingLeft="@dimen/horizontal_padding"
        android:paddingTop="@dimen/vertical_padding"
        android:text="@string/chooseAQuestionFirstText"
        android:textSize="@dimen/text_size" />

    <TextView
        android:id="@+id/questionTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:paddingLeft="@dimen/horizontal_padding"
        android:paddingTop="@dimen/vertical_padding"
        android:textSize="@dimen/large_text_size"
        android:visibility="invisible" />

    <TableRow
        android:id="@+id/tableRow4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:paddingBottom="@dimen/vertical_padding"
        android:paddingLeft="@dimen/horizontal_padding"
        android:paddingRight="@dimen/horizontal_padding"
        android:paddingTop="@dimen/vertical_padding" >

        <EditText
            android:id="@+id/answerEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:ems="10"
            android:height="@dimen/button_height"
            android:inputType="numberSigned|numberDecimal"
            android:visibility="invisible"
            android:width="@dimen/button_width" >

            <requestFocus />
        </EditText>

        <Button
            android:id="@+id/submitButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:gravity="center_horizontal|center_vertical"
            android:height="@dimen/button_height"
            android:text="@string/submitText"
            android:visibility="invisible"
            android:width="@dimen/button_width" />
    </TableRow>

    <ImageView
        android:id="@+id/resultImageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:maxHeight="@dimen/image_height"
        android:maxWidth="@dimen/image_with"
        android:paddingLeft="@dimen/horizontal_padding"
        android:paddingTop="@dimen/vertical_padding"
        android:src="@drawable/blank"
        android:visibility="invisible" />

    <TextView
        android:id="@+id/resultTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:paddingLeft="@dimen/horizontal_padding"
        android:paddingTop="@dimen/vertical_padding"
        android:textSize="@dimen/text_size"
        android:visibility="invisible" />

</TableLayout>